# donation-tracker

./: .babelrc  .browserslistrc  .codeclimate.yml  .editorconfig  .envrc  .eslintignore  .eslintrc  .flake8  .gitignore  .pre-commit-config.yaml  .prettierignore  .yarnrc.yml  LICENSE  MANIFEST.in  README.md  README.rst  TODO.txt  admin.py  ajax_lookup_channels.py  api_urls.py  auth.py  azure-pipelines.yml  babel.config.js  check_migrations.py  chipin.py  circle.yml  circle_settings.py  circle_tests.py  circle_urls.py  commandutil.py  conditional_aggregates.1.5.patch  context_processors.py  declarations.d.ts  decorators.py  dev.sh  docker-compose.yml  email.py  eventutil.py  fields.py  filters.py  (+52 more)
.github/: dependabot.yml  pull_request_template.md
.storybook/: webpack.config.js
admin/: __init__.py  bid.py  donation.py  event.py  filters.py  forms.py  inlines.py  log.py  prize.py  util.py
api/: serializers.py  urls.py  views.py
bundles/: devtools.js  index.js
ci/: .env.ci  local.py
design/: colors.ts  generate.ts  tokens.ts
docker/: Dockerfile  nginx.conf
donation-tracker-api-types/: README.md  package-lock.json  package.json
donation_tracker/: admin.py  fields.py  filters.py  forms.py  lookups.py  paypalutil.py  prizemail.py  prizesheet.py  randgen.py  tests.py  urls.py  validators.py  viewutil.py  widgets.py
feeds/: runs_calendar.py
js/: devtools.js  index.js
management/: auth.py
migrations/: 0001_initial.py  0001_squashed_0020_add_runner_pronouns_and_platform.py  0001_squashed_0039_upgrade_to_19.py  0002_add_event_datetime.py  0002_add_external_submissions.py  0002_add_prev_next_run_to_prize.py  0002_auto__del_field_event_chipinid.py  0003_add_event_timezone.py  0003_backfill_event_datetime.py  0003_populate_prev_next_run.py  0004_auto__add_field_event_receivername.py  0004_blanks_and_nulls.py  0004_remove_event_date.py  0005_add_moderation_filters.py  0005_run_commentators.py  0006_add_on_delete.py  0006_alter_runners.py  0006_run_console_and_fill_in_order.py  0007_add_prize_key.py  0007_event_field_tweaks.py  0007_remove_donor_runner_fields.py  0008_donor_cache_tweaks.py  0008_remove_prize_nulls.py  0008_submission_console.py  0009_change_flowmodel_credentialsmodel_to_1to1_fields.py  0009_remove_prize_nulls_pt2.py  0010_one_to_one_and_typo_fix.py  0010_remove_paypal_sandbox.py  0011_add_one_step_screening.py  0011_add_speedrun_category_releaseyear.py  0012_add_index_to_bid_state.py  0012_auto__add_field_event_targetamount.py  0012_remove_prize_startrun_and_endrun.py  0012_speedrun_giantbomb_id.py  0013_add_bid_option_max_length.py  0013_prize_provider.py  0014_add_event_auto_approve_threshold.py  0014_convert_email.py  0014_donor_user.py  0015_add_allow_donations.py  (+78 more)
models/: __init__.py  bid.py  country.py  donation.py  event.py  (+6 more)
(+1394 files in other folders)
