[tool.black]
extend-exclude = 'migrations/'
skip-string-normalization = 'True'
[tool.isort]
profile = 'black'
[project]
dependencies = [
  'babel~=2.17.0',
  'celery~=5.0',
  'channels>=4.0',
  'Django>=4.2,<6.0',
  'django-ical~=1.7',
  'django-mptt~=0.10',
  'django-paypal~=1.1',
  'django-post-office~=3.2',
  'django-timezone-field>=7.0,<8.0',
  'djangorestframework~=3.9',
  'python-dateutil~=2.8.1;python_version<"3.11"',
  'requests>=2.27.1,<2.33.0',
]
description = 'A Django app to assist in tracking donations for live broadcast events.'
name = 'django-donation-tracker'
readme = 'README.md'
requires-python = '>= 3.9'
version = '3.3.1.dev0'
[project.optional-dependencies]
development = [
  'daphne~=4.0',
]
tqdm = [
  'tqdm~=4.67.1',
]
